--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -32,6 +32,8 @@
 .heading-primary {
   color: #ffff;
   text-transform: uppercase;
+
+  backface-visibility: hidden;
 }
 
 .heading-primary-main {
@@ -39,6 +41,8 @@
   font-size: 60px;
   font-weight: 400;
   letter-spacing: 35px;
+
+  animation: moveInLeft 1s ease-out;
 }
 
 .heading-primary-sub {
@@ -46,4 +50,38 @@
   font-size: 20px;
   font-weight: 700;
   letter-spacing: 17.4px;
+
+  animation: moveInRight 1s ease-out;
+}
+
+@keyframes moveInLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(-100px);
+  }
+
+  80% {
+    transform: translateX(10px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translate(0);
+  }
+}
+
+@keyframes moveInRight {
+  0% {
+    opacity: 0;
+    transform: translateX(100px);
+  }
+
+  80% {
+    transform: translateX(-10px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translate(0);
+  }
 }
