--- a/src/commons/header/header.css
+++ b/src/commons/header/header.css
@@ -17,6 +17,7 @@
   top: 40%;
   left: 50%;
   transform: translate(-50%, -50%);
+  text-align: center;
 }
 
 .logo-box {
@@ -34,6 +35,7 @@
   text-transform: uppercase;
 
   backface-visibility: hidden;
+  margin-bottom: 60px;
 }
 
 .heading-primary-main {
