--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -10,7 +10,7 @@
   font-size: 1.6rem;
 }
 
-.move-in-bottom {
+.move-in--bottom {
   animation: moveInBottom 0.5s ease-out 0.75s;
   animation-fill-mode: backwards;
 }
@@ -25,7 +25,7 @@
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
 }
 
-.btn-white {
+.btn--white {
   background-color: #fff;
   color: #777;
 }
@@ -43,7 +43,7 @@
   transition: all 0.4s;
 }
 
-.btn-white::after {
+.btn--white::after {
   background-color: white;
 }
 
