created grid system

--- a/src/App.scss
+++ b/src/App.scss
@@ -10,5 +10,6 @@
 @import "./sass/components/button";
 
 @import "./sass/layout/header";
+@import "./sass/layout/grid";
 
 @import "./sass/pages/home";
