--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -9,6 +9,9 @@ $color-grey-dark: #777;
 $color-white: #fff;
 $color-black: #000;
 
+// FONT CONTROL
+$default-font-size: 1.6rem;
+
 // GRID background
 $grid-width: 114rem;
 $gutter-vertical: 8rem;
