created composition for images and finished about section

--- a/src/App.scss
+++ b/src/App.scss
@@ -8,6 +8,7 @@
 @import "./sass/base/utilities";
 
 @import "./sass/components/button";
+@import "./sass/components/composition";
 
 @import "./sass/layout/header";
 @import "./sass/layout/grid";
