created feature-box component and section

--- a/src/App.scss
+++ b/src/App.scss
@@ -9,8 +9,9 @@
 
 @import "./sass/components/button";
 @import "./sass/components/composition";
-
+@import "./sass/components/feature-box";
 @import "./sass/layout/header";
+
 @import "./sass/layout/grid";
 
 @import "./sass/pages/home";
