--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -49,7 +49,7 @@ body {
 
   &:hover {
     transform: skewY(2deg) skewX(15deg) scale(1.1);
-    text-shadow: 0.5rem 1rem 2rem rgba($color-black, 0.2);
+    text-shadow: $shadow-light;
   }
 }
 
