--- a/src/sass/components/_feature-box.scss
+++ b/src/sass/components/_feature-box.scss
@@ -4,7 +4,7 @@
   padding: 2.5rem;
   text-align: center;
   border-radius: 0.3rem;
-  box-shadow: 0 1.5rem 4rem rgba($color-black, 0.15);
+  box-shadow: $shadow-default;
   transition: transform 0.3s;
 
   &__icon {
