created stories section and stories component

--- a/src/App.scss
+++ b/src/App.scss
@@ -11,6 +11,7 @@
 @import "./sass/components/composition";
 @import "./sass/components/feature-box";
 @import "./sass/components/card";
+@import "./sass/components/story";
 
 @import "./sass/layout/header";
 @import "./sass/layout/grid";
