--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -27,3 +27,8 @@
   padding: 25rem 0 15rem 0;
   margin-top: -12rem;
 }
+
+.section-stories {
+  padding: 15rem;
+  background-color: $color-grey-light-1;
+}
