--- a/src/App.scss
+++ b/src/App.scss
@@ -12,6 +12,7 @@
 @import "./sass/components/feature-box";
 @import "./sass/components/card";
 @import "./sass/components/story";
+@import "./sass/components/bg-video";
 
 @import "./sass/layout/header";
 @import "./sass/layout/grid";
