--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -69,8 +69,8 @@
   cursor: pointer;
   border-bottom: 1px solid $color-primary;
   padding: 0.3rem;
-  background-color: $color-grey-light-1;
   transition: all 0.2s;
+  background-color: transparent;
 
   &:hover {
     background-color: $color-primary;
