created booking section and form component

--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -28,3 +28,5 @@ $gutter-horizontal: 6rem;
 
 $shadow-default: 0 1.5rem 4rem rgba($color-black, 0.15);
 $shadow-light: 0.5rem 1rem 2rem rgba($color-black, 0.2);
+
+$border-radius-default: 0.3rem;
