--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -29,6 +29,34 @@
 }
 
 .section-stories {
-  padding: 15rem;
+  padding: 15rem 0;
   position: relative;
+}
+
+.section-book {
+  padding: 15rem 0;
+  background-image: linear-gradient(
+    to right bottom,
+    $color-primary-light,
+    $color-primary-dark
+  );
+}
+
+.book {
+  background-image: linear-gradient(
+      105deg,
+      rgba($color-white, 0.9) 50%,
+      transparent 50%
+    ),
+    url(../../commons/images/nat-10.jpg);
+  background-size: cover;
+  border-radius: $border-radius-default;
+  box-shadow: $shadow-default;
+
+  height: 50rem;
+
+  &__form {
+    width: 50%;
+    padding: 6rem;
+  }
 }
