created label and input elements

--- a/src/App.scss
+++ b/src/App.scss
@@ -13,6 +13,7 @@
 @import "./sass/components/card";
 @import "./sass/components/story";
 @import "./sass/components/bg-video";
+@import "./sass/components/form";
 
 @import "./sass/layout/header";
 @import "./sass/layout/grid";
