--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -13,6 +13,8 @@ $color-grey-light-1: #f7f7f7;
 $color-grey-light-2: #eee;
 
 $color-grey-dark: #777;
+$color-grey-dark-2: #999;
+
 $color-white: #fff;
 $color-black: #000;
 
@@ -29,4 +31,7 @@ $gutter-horizontal: 6rem;
 $shadow-default: 0 1.5rem 4rem rgba($color-black, 0.15);
 $shadow-light: 0.5rem 1rem 2rem rgba($color-black, 0.2);
 
+$border-radius-small: 0.2rem;
 $border-radius-default: 0.3rem;
+$bottom-border-green: 3px solid $color-primary;
+$bottom-border-orange: 3px solid $color-secondary-dark;
