created radio components and finished booking section

--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -34,4 +34,5 @@ $shadow-light: 0.5rem 1rem 2rem rgba($color-black, 0.2);
 $border-radius-small: 0.2rem;
 $border-radius-default: 0.3rem;
 $bottom-border-green: 3px solid $color-primary;
+$bottom-border-green-thick: 5px solid $color-primary;
 $bottom-border-orange: 3px solid $color-secondary-dark;
