--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -1,4 +1,5 @@
 .btn {
+  &,
   &:link,
   &:visited {
     text-transform: uppercase;
@@ -9,6 +10,9 @@
     transition: all 0.2s;
     position: relative;
     font-size: $default-font-size;
+
+    border: none;
+    cursor: pointer;
   }
 
   &:hover {
@@ -67,6 +71,7 @@
   display: inline-block;
   border: none;
   cursor: pointer;
+  text-decoration: none;
   border-bottom: 1px solid $color-primary;
   padding: 0.3rem;
   transition: all 0.2s;
@@ -79,7 +84,9 @@
     transform: translateY(-0.2rem);
   }
 
-  &:active {
+  &:active,
+  &:focus {
+    outline: none;
     box-shadow: 0 1rem 2rem rgba($color-black, 0.2);
     transform: translateY(0);
   }
