--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -14,12 +14,14 @@ $color-grey-light-2: #eee;
 
 $color-grey-dark: #777;
 $color-grey-dark-2: #999;
+$color-grey-dark-3: #333;
 
 $color-white: #fff;
 $color-black: #000;
 
 // FONT CONTROL
 $default-font-size: 1.6rem;
+$normal-font-size: 1.4rem;
 
 // GRID background
 $grid-width: 114rem;
@@ -30,6 +32,7 @@ $gutter-horizontal: 6rem;
 
 $shadow-default: 0 1.5rem 4rem rgba($color-black, 0.15);
 $shadow-light: 0.5rem 1rem 2rem rgba($color-black, 0.2);
+$shadow-link: 0 1rem 2rem rgba($color-black, 0.4);
 
 $border-radius-small: 0.2rem;
 $border-radius-default: 0.3rem;
