created navigation section and styled navigation links

--- a/src/App.scss
+++ b/src/App.scss
@@ -18,5 +18,6 @@
 @import "./sass/layout/header";
 @import "./sass/layout/grid";
 @import "./sass/layout/footer";
+@import "./sass/layout/navigation";
 
 @import "./sass/pages/home";
