--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -22,6 +22,7 @@ $color-black: #000;
 // FONT CONTROL
 $default-font-size: 1.6rem;
 $normal-font-size: 1.4rem;
+$medium-font-size: 3rem;
 
 // GRID background
 $grid-width: 114rem;
