created popup component

--- a/src/App.scss
+++ b/src/App.scss
@@ -14,6 +14,7 @@
 @import "./sass/components/story";
 @import "./sass/components/bg-video";
 @import "./sass/components/form";
+@import "./sass/components/popup";
 
 @import "./sass/layout/header";
 @import "./sass/layout/grid";
