finished styling popup

--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -23,6 +23,7 @@ $color-black: #000;
 $default-font-size: 1.6rem;
 $normal-font-size: 1.4rem;
 $medium-font-size: 3rem;
+$big-font-size: 5rem;
 
 // GRID background
 $grid-width: 114rem;
