created media queries for nav, sections, grid, footer, typography, utilities and for the base

--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -3,9 +3,17 @@
   padding: 10rem 0;
   font-size: $normal-font-size;
 
+  @include respond(tab-port) {
+    padding: 8rem 0;
+  }
+
   &__logo-box {
     text-align: center;
     margin-bottom: 8rem;
+
+    @include respond(tab-port) {
+      margin-bottom: 6rem;
+    }
   }
 
   &__logo {
@@ -17,6 +25,11 @@
     border-top: 1px solid $color-grey-dark;
     padding-top: 2rem;
     display: inline-block;
+
+    @include respond(tab-port) {
+      width: 100%;
+      text-align: center;
+    }
   }
 
   &__list {
@@ -56,5 +69,10 @@
     float: right;
     color: $color-grey-dark;
     color: $color-grey-light-1;
+
+    @include respond(tab-port) {
+      width: 100%;
+      float: none;
+    }
   }
 }
