--- a/src/sass/components/_composition.scss
+++ b/src/sass/components/_composition.scss
@@ -8,17 +8,42 @@
     z-index: 10;
     transition: all 0.2s;
 
+    @include respond(tab-port) {
+      float: left;
+      position: relative;
+      width: 33.33333333%;
+      box-shadow: $shadow-light;
+    }
+
     &--p1 {
       left: 0;
       top: -2rem;
+
+      @include respond(tab-port) {
+        top: 0;
+        transform: scale(1.2);
+      }
     }
     &--p2 {
       right: 0;
       top: 2rem;
+
+      @include respond(tab-port) {
+        top: -1rem;
+        left: 0;
+        transform: scale(1.3);
+        z-index: 15;
+      }
     }
     &--p3 {
       left: 20%;
       top: 10rem;
+
+      @include respond(tab-port) {
+        top: 1rem;
+        left: 0;
+        transform: scale(1.1);
+      }
     }
 
     &:hover {
