--- a/src/sass/components/_form.scss
+++ b/src/sass/components/_form.scss
@@ -16,6 +16,10 @@
     display: block;
     transition: all 0.3s;
 
+    @include respond(tab-port) {
+      width: 100%;
+    }
+
     &:focus {
       outline: none;
       box-shadow: $shadow-light;
@@ -49,6 +53,11 @@
   &__radio-group {
     width: 50%;
     display: inline-block;
+
+    @include respond(tab-port) {
+      width: 100%;
+      margin-bottom: 2rem;
+    }
   }
 
   &__radio-input {
