--- a/src/sass/components/_popup.scss
+++ b/src/sass/components/_popup.scss
@@ -21,12 +21,21 @@
     opacity: 0;
     transform: translate(-50%, -50%) scale(0.5);
     transition: all 0.4s 0.2s;
+
+    @include respond(tab-land) {
+      display: block;
+    }
   }
 
   &__left {
     width: 33.33333333%;
     display: table-cell;
     vertical-align: middle;
+
+    @include respond(tab-land) {
+      display: block;
+      width: 100%;
+    }
   }
 
   &__right {
@@ -39,6 +48,16 @@
   &__img {
     display: block;
     width: 100%;
+
+    @include respond(tab-land) {
+      width: 50%;
+      float: left;
+      height: 25rem;
+    }
+
+    @include respond(phone) {
+      display: none;
+    }
   }
 
   &__text {
