--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -65,6 +65,7 @@
 .book {
   background-image: linear-gradient(
       105deg,
+      rgba($color-white, 0.9) 0%,
       rgba($color-white, 0.9) 50%,
       transparent 50%
     ),
@@ -73,10 +74,35 @@
   border-radius: $border-radius-default;
   box-shadow: $shadow-default;
 
-  height: 50rem;
+  @include respond(tab-land) {
+    background-image: linear-gradient(
+        105deg,
+        rgba($color-white, 0.9) 0%,
+        rgba($color-white, 0.9) 65%,
+        transparent 65%
+      ),
+      url(../../commons/images/nat-10.jpg);
+  }
+
+  @include respond(tab-port) {
+    background-image: linear-gradient(
+        to right,
+        rgba($color-white, 0.9) 0%,
+        rgba($color-white, 0.9) 65%
+      ),
+      url(../../commons/images/nat-10.jpg);
+  }
 
   &__form {
     width: 50%;
     padding: 6rem;
+
+    @include respond(tab-land) {
+      width: 65%;
+    }
+
+    @include respond(tab-port) {
+      width: 100%;
+    }
   }
 }
